@@ -21,9 +21,9 @@ import modelengine.fitframework.util.ObjectUtils;
 import modelengine.fitframework.util.ReflectionUtils;
 import modelengine.fitframework.validation.data.Company;
 import modelengine.fitframework.validation.data.Employee;
-import modelengine.fitframework.validation.data.ValidationTestData;
-import modelengine.fitframework.validation.data.ValidateService;
 import modelengine.fitframework.validation.data.GroupValidateService;
+import modelengine.fitframework.validation.data.ValidateService;
+import modelengine.fitframework.validation.data.ValidationTestData;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -58,10 +58,10 @@ public class ValidationHandlerTest {
 
     @BeforeEach
     void setUp() {
-        handler.setLocale(Locale.CHINA);
-        when(validated.value()).thenReturn(new Class[0]);
-        when(fitRuntime.resolverOfAnnotations()).thenReturn(annotationMetadataResolver);
-        when(beanContainer.runtime()).thenReturn(fitRuntime);
+        this.handler.setLocale(Locale.CHINA);
+        when(this.validated.value()).thenReturn(new Class[0]);
+        when(this.fitRuntime.resolverOfAnnotations()).thenReturn(this.annotationMetadataResolver);
+        when(this.beanContainer.runtime()).thenReturn(this.fitRuntime);
     }
 
     private ConstraintViolationException invokeHandleMethod(Method targetMethod, Object[] args) {
@@ -71,10 +71,10 @@ public class ValidationHandlerTest {
         JoinPoint joinPoint = mock(JoinPoint.class);
         when(joinPoint.getMethod()).thenReturn(targetMethod);
         when(joinPoint.getArgs()).thenReturn(args);
-        when(joinPoint.getTarget()).thenReturn(validateService);
+        when(joinPoint.getTarget()).thenReturn(this.validateService);
 
         InvocationTargetException invocationTargetException = catchThrowableOfType(InvocationTargetException.class,
-                () -> handleValidatedMethod.invoke(handler, joinPoint, validated));
+                () -> handleValidatedMethod.invoke(this.handler, joinPoint, this.validated));
 
         return ObjectUtils.cast(invocationTargetException.getTargetException());
     }
@@ -107,7 +107,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@NotNull注解")
+    @DisplayName("测试 @NotNull 注解")
     void testNotNullValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testNotNull", String.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {null});
@@ -115,7 +115,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@NotEmpty注解")
+    @DisplayName("测试 @NotEmpty 注解")
     void testNotEmptyValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testNotEmpty", String.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {""});
@@ -123,7 +123,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@NotBlank注解")
+    @DisplayName("测试 @NotBlank 注解")
     void testNotBlankValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testNotBlank", String.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {"   "});
@@ -131,7 +131,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Null注解")
+    @DisplayName("测试 @Null 注解")
     void testNullValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testNull", String.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {"not null"});
@@ -139,7 +139,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Size注解-字符串")
+    @DisplayName("测试 @Size 注解 - 字符串")
     void testSizeStringValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testSize", String.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {"a"});
@@ -147,7 +147,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Size注解-集合")
+    @DisplayName("测试 @Size 注解 - 集合")
     void testSizeListValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testSizeList", List.class);
         ConstraintViolationException exception =
@@ -156,7 +156,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Min注解")
+    @DisplayName("测试 @Min 注解")
     void testMinValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testMin", int.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {5});
@@ -164,7 +164,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Max注解")
+    @DisplayName("测试 @Max 注解")
     void testMaxValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testMax", int.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {150});
@@ -172,7 +172,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@DecimalMin注解")
+    @DisplayName("测试 @DecimalMin 注解")
     void testDecimalMinValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testDecimalMin", BigDecimal.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {new BigDecimal("5.0")});
@@ -180,7 +180,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@DecimalMax注解")
+    @DisplayName("测试 @DecimalMax 注解")
     void testDecimalMaxValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testDecimalMax", BigDecimal.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {new BigDecimal("150.0")});
@@ -188,7 +188,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Positive注解")
+    @DisplayName("测试 @Positive 注解")
     void testPositiveValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testPositive", int.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {0});
@@ -196,7 +196,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@PositiveOrZero注解")
+    @DisplayName("测试 @PositiveOrZero 注解")
     void testPositiveOrZeroValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testPositiveOrZero", int.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {-1});
@@ -204,7 +204,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Negative注解")
+    @DisplayName("测试 @Negative 注解")
     void testNegativeValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testNegative", int.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {1});
@@ -212,7 +212,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@NegativeOrZero注解")
+    @DisplayName("测试 @NegativeOrZero 注解")
     void testNegativeOrZeroValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testNegativeOrZero", int.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {1});
@@ -220,7 +220,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Digits注解")
+    @DisplayName("测试 @Digits 注解")
     void testDigitsValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testDigits", BigDecimal.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {new BigDecimal("1234.567")});
@@ -228,7 +228,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Past注解")
+    @DisplayName("测试 @Past 注解")
     void testPastValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testPast", LocalDate.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {LocalDate.now().plusDays(1)});
@@ -236,7 +236,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@PastOrPresent注解")
+    @DisplayName("测试 @PastOrPresent 注解")
     void testPastOrPresentValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testPastOrPresent", LocalDate.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {LocalDate.now().plusDays(1)});
@@ -244,7 +244,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Future注解")
+    @DisplayName("测试 @Future 注解")
     void testFutureValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testFuture", LocalDate.class);
         ConstraintViolationException exception =
@@ -253,7 +253,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@FutureOrPresent注解")
+    @DisplayName("测试 @FutureOrPresent 注解")
     void testFutureOrPresentValidation() {
         Method method =
                 ReflectionUtils.getDeclaredMethod(ValidateService.class, "testFutureOrPresent", LocalDate.class);
@@ -263,7 +263,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Pattern注解")
+    @DisplayName("测试 @Pattern 注解")
     void testPatternValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testPattern", String.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {"123"});
@@ -271,7 +271,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Email注解")
+    @DisplayName("测试 @Email 注解")
     void testEmailValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testEmail", String.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {"invalid-email"});
@@ -279,7 +279,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@AssertTrue注解")
+    @DisplayName("测试 @AssertTrue 注解")
     void testAssertTrueValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testAssertTrue", boolean.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {false});
@@ -287,7 +287,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@AssertFalse注解")
+    @DisplayName("测试 @AssertFalse 注解")
     void testAssertFalseValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testAssertFalse", boolean.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {true});
@@ -381,10 +381,14 @@ public class ValidationHandlerTest {
             when(joinPoint.getMethod()).thenReturn(method);
             when(joinPoint.getArgs()).thenReturn(new Object[] {15});
             when(joinPoint.getTarget()).thenReturn(new GroupValidateService.TeacherValidateService());
-            when(validated.value()).thenReturn(new Class[] {ValidationTestData.TeacherGroup.class});
+            when(ValidationHandlerTest.this.validated.value()).thenReturn(new Class[] {
+                    ValidationTestData.TeacherGroup.class
+            });
 
             InvocationTargetException invocationTargetException = catchThrowableOfType(InvocationTargetException.class,
-                    () -> handleValidatedMethod.invoke(handler, joinPoint, validated));
+                    () -> handleValidatedMethod.invoke(ValidationHandlerTest.this.handler,
+                            joinPoint,
+                            ValidationHandlerTest.this.validated));
 
             ConstraintViolationException exception = ObjectUtils.cast(invocationTargetException.getTargetException());
             assertThat(exception.getMessage()).contains("范围要在22~65之内");
@@ -415,10 +419,14 @@ public class ValidationHandlerTest {
 
             when(joinPoint.getArgs()).thenReturn(new Object[] {data});
             when(joinPoint.getTarget()).thenReturn(new GroupValidateService.AdvancedValidateService());
-            when(validated.value()).thenReturn(new Class[] {ValidationTestData.AdvancedGroup.class});
+            when(ValidationHandlerTest.this.validated.value()).thenReturn(new Class[] {
+                    ValidationTestData.AdvancedGroup.class
+            });
 
             InvocationTargetException invocationTargetException = catchThrowableOfType(InvocationTargetException.class,
-                    () -> handleValidatedMethod.invoke(handler, joinPoint, validated));
+                    () -> handleValidatedMethod.invoke(ValidationHandlerTest.this.handler,
+                            joinPoint,
+                            ValidationHandlerTest.this.validated));
 
             ConstraintViolationException exception = ObjectUtils.cast(invocationTargetException.getTargetException());
             assertThat(exception.getMessage()).contains("高级组年龄必须小于等于200");
@@ -575,7 +583,7 @@ public class ValidationHandlerTest {
         invalidData.setAge(-1);
 
         List<ValidationTestData> dataList1 = Arrays.asList(validData, invalidData);
-        List<ValidationTestData> dataList2 = Arrays.asList(validData);
+        List<ValidationTestData> dataList2 = List.of(validData);
 
         Map<Employee, List<ValidationTestData>> map = new HashMap<>();
         map.put(validEmployee, dataList1);
@@ -590,65 +598,65 @@ public class ValidationHandlerTest {
     void shouldReturnMsgWhenValidateListComplex() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "validateCompanyList", List.class);
         Employee invalidEmployee = new Employee("", 17);
-        Company invalidCompany = new Company(Arrays.asList(invalidEmployee));
-        List<Company> companies = Arrays.asList(invalidCompany);
+        Company invalidCompany = new Company(List.of(invalidEmployee));
+        List<Company> companies = List.of(invalidCompany);
 
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {companies});
         assertThat(exception).isNotNull();
     }
 
     @Test
-    @DisplayName("测试@NotNull注解-成功场景")
+    @DisplayName("测试 @NotNull 注解 - 成功场景")
     void testNotNullValidationSuccess() {
-        validateService.testNotNull("valid value");
+        this.validateService.testNotNull("valid value");
     }
 
     @Test
-    @DisplayName("测试@Size注解-最小边界值")
+    @DisplayName("测试 @Size 注解 - 最小边界值")
     void testSizeStringValidationMinBoundary() {
-        validateService.testSize("ab"); // 2个字符，最小边界
+        this.validateService.testSize("ab"); // 2个字符，最小边界
     }
 
     @Test
-    @DisplayName("测试@Size注解-最大边界值")
+    @DisplayName("测试 @Size 注解 - 最大边界值")
     void testSizeStringValidationMaxBoundary() {
-        validateService.testSize("abcdefghij"); // 10个字符，最大边界
+        this.validateService.testSize("abcdefghij"); // 10个字符，最大边界
     }
 
     @Test
-    @DisplayName("测试@Min注解-边界值")
+    @DisplayName("测试 @Min 注解 - 边界值")
     void testMinValidationBoundary() {
-        validateService.testMin(10); // 最小值边界
+        this.validateService.testMin(10); // 最小值边界
     }
 
     @Test
-    @DisplayName("测试@Max注解-边界值")
+    @DisplayName("测试 @Max 注解 - 边界值")
     void testMaxValidationBoundary() {
-        validateService.testMax(100); // 最大值边界
+        this.validateService.testMax(100); // 最大值边界
     }
 
     @Test
-    @DisplayName("测试@Positive注解-边界值")
+    @DisplayName("测试 @Positive 注解 - 边界值")
     void testPositiveValidationBoundary() {
-        validateService.testPositive(1); // 最小正数
+        this.validateService.testPositive(1); // 最小正数
     }
 
     @Test
-    @DisplayName("测试@PositiveOrZero注解-零值")
+    @DisplayName("测试 @PositiveOrZero 注解 - 零值")
     void testPositiveOrZeroValidationZero() {
-        validateService.testPositiveOrZero(0); // 零值
+        this.validateService.testPositiveOrZero(0); // 零值
     }
 
     @Test
-    @DisplayName("测试@Past注解-边界值")
+    @DisplayName("测试 @Past 注解 - 边界值")
     void testPastValidationBoundary() {
-        validateService.testPast(LocalDate.now().minusDays(1)); // 昨天
+        this.validateService.testPast(LocalDate.now().minusDays(1)); // 昨天
     }
 
     @Test
-    @DisplayName("测试@Future注解-边界值")
+    @DisplayName("测试 @Future 注解 - 边界值")
     void testFutureValidationBoundary() {
-        validateService.testFuture(LocalDate.now().plusDays(1)); // 明天
+        this.validateService.testFuture(LocalDate.now().plusDays(1)); // 明天
     }
 
     @Test
@@ -663,7 +671,7 @@ public class ValidationHandlerTest {
         validData.setDiscount(new BigDecimal("-5.0"));
         validData.setAgreed(true);
 
-        validateService.testValidObject(validData);
+        this.validateService.testValidObject(validData);
     }
 
     @Test
@@ -691,7 +699,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试空集合和null值混合")
+    @DisplayName("测试空集合和 null 值混合")
     void testEmptyCollectionAndNullMixed() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class,
                 "validateMixedCollections",
@@ -703,7 +711,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Range注解-最小值验证")
+    @DisplayName("测试 @Range 注解 - 最小值验证")
     void testRangeMinValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testRange", int.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {5});
@@ -711,7 +719,7 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Range注解-最大值验证")
+    @DisplayName("测试 @Range 注解 - 最大值验证")
     void testRangeMaxValidation() {
         Method method = ReflectionUtils.getDeclaredMethod(ValidateService.class, "testRange", int.class);
         ConstraintViolationException exception = invokeHandleMethod(method, new Object[] {150});
@@ -719,25 +727,25 @@ public class ValidationHandlerTest {
     }
 
     @Test
-    @DisplayName("测试@Range注解-最小边界值")
+    @DisplayName("测试 @Range 注解 - 最小边界值")
     void testRangeMinBoundary() {
-        validateService.testRange(10); // 最小边界值，应该通过
+        this.validateService.testRange(10); // 最小边界值，应该通过
     }
 
     @Test
-    @DisplayName("测试@Range注解-最大边界值")
+    @DisplayName("测试 @Range 注解 - 最大边界值")
     void testRangeMaxBoundary() {
-        validateService.testRange(100); // 最大边界值，应该通过
+        this.validateService.testRange(100); // 最大边界值，应该通过
     }
 
     @Test
-    @DisplayName("测试@Range注解-中间值")
+    @DisplayName("测试 @Range 注解 - 中间值")
     void testRangeValidValue() {
-        validateService.testRange(50); // 中间值，应该通过
+        this.validateService.testRange(50); // 中间值，应该通过
     }
 
     @Test
-    @DisplayName("测试@Range注解-BigDecimal类型")
+    @DisplayName("测试 @Range 注解 - BigDecimal 类型")
     void testRangeBigDecimalValidation() {
         Method method =
                 ReflectionUtils.getDeclaredMethod(ValidateService.class, "testRangeBigDecimal", BigDecimal.class);
